--- a/#src/html/index.html
+++ b/#src/html/index.html
@@ -9,11 +9,12 @@
 		<meta name="keywords" content="Laconic Studio">
 		<meta name="author" content="">
 		<meta name="robots" content="noindex, nofollow">
-		<!-- basic favicons --><link rel="icon" href="images/favicons/favicon.png" sizes="32x32">
+		<!-- basic favicons -->
+		<link rel="icon" href="images/favicons/favicon.png" sizes="32x32">
 		<link rel="icon" href="images/favicons/favicon.png" sizes="32x32">
 		<link rel="apple-touch-icon" href="images/favicons/favicon.png">
 		<meta name="msapplication-TileImage" content="images/favicons/favicon.png">
-		<link rel="stylesheet" type="text/css" href="css/style.min.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 		<script>
 			document.documentElement.className = "js";
