--- a/#src/html/unipro.html
+++ b/#src/html/unipro.html
@@ -12,12 +12,18 @@
     <meta property="og:type" content="article">
     <meta property="og:image" content="Project screenshot[nope]">
     <meta property="og:site_name" content="unipro.ua">
+    <!-- basic favicons -->
+		<link rel="icon" href="images/favicons/favicon.png" sizes="32x32">
+		<link rel="icon" href="images/favicons/favicon.png" sizes="64x64">
+		<link rel="apple-touch-icon" href="images/favicons/favicon.png">
+		<meta name="msapplication-TileImage" content="images/favicons/favicon.png">
     <!-- Fonts -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -361,9 +367,8 @@
     </footer>
     <!-- JS Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-    <script src="libraries/wow/wow.js"></script>
     <script src="libraries/parallax/parallax-mouse.min.js"></script>
-    <script src="libraries/lightbox/lightbox.min.js"></script>
+    <script src="libraries/libraries.min.js"></script>
     <script src="scripts/script.min.js"></script>
 </body>
 
