--- a/#src/html/doosan.html
+++ b/#src/html/doosan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="unipro description">
     <meta name="keywords" content="test, task, task, work, IT">
-    <title>Unipro Page</title>
+    <title>Doosan Page</title>
     <!-- OG Tags -->
     <meta property="og:title" content="Unipro">
     <meta property="og:description" content="unipro description">
@@ -22,10 +22,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
-</head>
 </head>
 
 <body>
@@ -50,17 +49,18 @@
         </div>
     </header>
     <main class="main-section">
+        <img src="images/doosan/doosan-award.svg" class="doosan-award" alt="doosan-award">
         <section class="offer-section">
             <div class="container">
                 <div class="offer-titleBlock">
                     <div class="offer-bBg">
                         <h1 class="wow fadeIn" data-wow-duration="2s" data-wow-delay="1.5s">
-                            Unipro
+                            DOOSAN
                         </h1>
                     </div>
                     <div class="offer-yBg">
                         <p class="wow fadeIn" data-wow-duration="2s" data-wow-delay="1.5s">
-                            Сайт поставщика весового оборудования и решений для автоматизации бизнеса
+                            для официального дистрибьютора DOOSAN в Украине
                         </p>
                     </div>
                 </div>
@@ -80,14 +80,14 @@
                 <div class="about">
                     <div class="row about-title">
                         <div class="col-sm-3">
-                            <img src="images/unipro/logo.svg" alt="unipro-logo">
+                            <img src="images/doosan/doosan-logo.svg" alt="doosan-logo">
                         </div>
                         <div class="col-sm-9">
                             <p class="about-titleCaption">
-                                - профессиональное промышленное, складское и торговое оборудование, и специализированное
-                                программное обеспечение для предприятий любого масштаба. Специалисты готовы внедрить
-                                комплексные решения, позволяющие как начать бизнес с нуля, так и значительно повысить
-                                эффективность существующих компаний.
+                                - Производственные предприятия и строительные компании отдают предпочтение качественной
+                                и надежной спецтехнике Doosan, которая не подведет в самых сложных условиях
+                                эксплуатации. Doosan сегодня – эталон надежности, производительности и экономичности, не
+                                требующий доказательств.
                             </p>
                         </div>
                     </div>
@@ -162,30 +162,26 @@
                     <div class="pallete-caption">
                         <div class="pallete-font">
                             <h3>Шрифт</h3>
-                            <p>Gotham Pro</p>
+                            <p>Qanelas</p>
                         </div>
                         <div class="pallete-color">
                             <h3>Цвет</h3>
                             <div class="color-types">
                                 <div class="color-typesCard wow fadeInLeft" data-wow-duration="1s">
                                     <span></span>
-                                    <p>#0175C2</p>
+                                    <p>#FD6D26</p>
                                 </div>
                                 <div class="color-typesCard wow fadeInLeft" data-wow-duration="2s">
                                     <span class="cardCol2"></span>
-                                    <p>#4AB0E1</p>
+                                    <p>#000000</p>
                                 </div>
                                 <div class="color-typesCard wow fadeInLeft" data-wow-duration="3s">
                                     <span class="cardCol3"></span>
-                                    <p>#DAF1FF</p>
+                                    <p>#F2F2F4</p>
                                 </div>
                                 <div class="color-typesCard wow fadeInLeft" data-wow-duration="4s">
                                     <span class="cardCol4"></span>
-                                    <p>#A3A3A1</p>
-                                </div>
-                                <div class="color-typesCard wow fadeInLeft" data-wow-duration="5s">
-                                    <span class="cardCol5"></span>
-                                    <p>#F3F5F4</p>
+                                    <p>#575757</p>
                                 </div>
                             </div>
                         </div>
@@ -232,7 +228,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-12 technology-img">
-                        <img src="images/unipro/unipro-mac.png" alt="unipro-mac">
+                        <img src="images/doosan/doosan-mac.png" alt="doosan-mac">
                     </div>
                 </div>
             </div>
@@ -243,20 +239,42 @@
                     <div class="pages-title">
                         <h2>Разработанные страницы</h2>
                     </div>
-                    <div class="pages-pR1">
-                        <img src="images/unipro/unipro-laptop.png" class="wow fadeIn" data-wow-duration="2s" alt="laptop">
-                        <a href="images/unipro/unipro-program.png" data-lightbox="roadtrip"> <img src="images/unipro/unipro-program.png"
-                                class="wow fadeIn" data-wow-duration="2s" alt="program">
-                        </a>
-                    </div>
-                    <div class="pages-pR2">
-                        <a href="images/unipro/unipro-partners.png" data-lightbox="roadtrip"><img src="images/unipro/unipro-partners.png"
-                                class="wow fadeIn" data-wow-duration="2s" alt="partners"></a>
-                        <a href="images/uniprounipro-help.png" data-lightbox="roadtrip"><img src="images/unipro/unipro-help.png"
-                                class="wow fadeIn" data-wow-duration="2s" alt="help">
-                        </a>
-                        <a href="images/unipro/unipro-about.png" data-lightbox="roadtrip"><img src="images/unipro/unipro-about.png"
-                                class="wow fadeIn" data-wow-duration="2s" alt="about"></a>
+                    <div class="pages-pR1 row">
+                        <div class="col-lg-3 col-md-6">
+                            <a href="images/doosan/doosan-pages1.png" data-lightbox="roadtrip">
+                                <img src="images/doosan/doosan-pages1.png" alt="page1">
+                            </a>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <a href="images/doosan/doosan-pages2.png" data-lightbox="roadtrip">
+                                <img src="images/doosan/doosan-pages2.png" alt="page2">
+                            </a>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <a href="images/doosan/doosan-pages3.png" data-lightbox="roadtrip">
+                                <img src="images/doosan/doosan-pages3.png" alt="page3">
+                            </a>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <a href="images/doosan/doosan-pages4.png" data-lightbox="roadtrip">
+                                <img src="images/doosan/doosan-pages4.png" alt="page4">
+                            </a>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <a href="images/doosan/doosan-pages5.png" data-lightbox="roadtrip">
+                                <img src="images/doosan/doosan-pages5.png" alt="page5">
+                            </a>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <a href="images/doosan/doosan-pages6.png" data-lightbox="roadtrip">
+                                <img src="images/doosan/doosan-pages6.png" alt="page6">
+                            </a>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <a href="images/doosan/doosan-pages7.png" data-lightbox="roadtrip">
+                                <img src="images/doosan/doosan-pages7.png" alt="page7">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -275,13 +293,13 @@
                 </div>
             </div>
             <div class="adaptive-imgContainer wow fadeIn" data-wow-duration="2s">
-                <img src="images/unipro/unipro-adaptiveLeft.png" alt="adLeft" class="adImg-Left">
-                <img src="images/unipro/unipro-adaptiveT.png" alt="adMain" class="adImg-Main">
-                <img src="images/unipro/unipro-adaptiveRight.png" alt="adRight" class="adImg-Right">
-                <img src="images/unipro/unipro-adaptiveB.png" alt="adB" class="adImg-Bottom">
+                <img src="images/doosan/doosan-adaptiveL.png" alt="adLeft" class="adImg-Left">
+                <img src="images/doosan/doosan-adaptiveM.png" alt="adMain" class="adImg-Main">
+                <img src="images/doosan/doosan-adaptiveR.png" alt="adRight" class="adImg-Right">
+                <img src="images/doosan/doosan-adaptiveB.png" alt="adB" class="adImg-Bottom">
             </div>
             <div class="adaptive-link">
-                <a href="https://unipro.ua/" target="_blank">unipro.ua</a>
+                <a href="https://www.ind-group.com.ua/" target="_blank">ind-group.com.ua</a>
             </div>
         </section>
         <section class="contacts-section">
@@ -357,7 +375,7 @@
                 <h2>Следующий кейс</h2>
                 <div class="footer-info">
                     <a href="#" class="footer-infoImg">
-                        <img src="images/common/axisoft.svg" alt="axoft">
+                        <img src="images/doosan/doosan-vitae.svg" alt="vitae">
                     </a>
                     <p>корпоративный сайт</p>
                 </div>
@@ -368,13 +386,11 @@
         </div>
     </footer>
     <!-- JS Scripts -->
-    <!-- <script src="scripts/libraries.min.js"></script> -->
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="libraries/wow/wow.min.js"></script>
-    <!-- <script src="scripts/script.js"></script> -->
-    <script>
-        new WOW().init();
-    </script>
+    <!-- <script src="js/parallax-mouse.min.js"></script> -->
+    <script src="libraries/lightbox/lightbox.min.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
