--- a/#src/html/liom.html
+++ b/#src/html/liom.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="unipro description">
     <meta name="keywords" content="test, task, task, work, IT">
-    <title>Unipro Page</title>
+    <title>Liom Page</title>
     <!-- OG Tags -->
     <meta property="og:title" content="Unipro">
     <meta property="og:description" content="unipro description">
@@ -22,10 +22,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
-</head>
 </head>
 
 <body>
@@ -55,12 +54,12 @@
                 <div class="offer-titleBlock">
                     <div class="offer-bBg">
                         <h1 class="wow fadeIn" data-wow-duration="2s" data-wow-delay="1.5s">
-                            Unipro
+                            Liom
                         </h1>
                     </div>
                     <div class="offer-yBg">
                         <p class="wow fadeIn" data-wow-duration="2s" data-wow-delay="1.5s">
-                            Сайт поставщика весового оборудования и решений для автоматизации бизнеса
+                            Делают жизнь украинцев защищенной
                         </p>
                     </div>
                 </div>
@@ -80,14 +79,14 @@
                 <div class="about">
                     <div class="row about-title">
                         <div class="col-sm-3">
-                            <img src="images/unipro/logo.svg" alt="unipro-logo">
+                            <img src="images/liom/liom-logo.svg" alt="liom-logo">
                         </div>
                         <div class="col-sm-9">
                             <p class="about-titleCaption">
-                                - профессиональное промышленное, складское и торговое оборудование, и специализированное
-                                программное обеспечение для предприятий любого масштаба. Специалисты готовы внедрить
-                                комплексные решения, позволяющие как начать бизнес с нуля, так и значительно повысить
-                                эффективность существующих компаний.
+                                Поставляют в Украину высококачественные Цилиндры и замки с Европы, что оборудованы
+                                инновацийними технологиями защиты и имеют высокий класс безопасности. Системы запирания
+                                превратят Ваш дом в неприступной крепость и захищатимуть его от посягательств
+                                злоумышленников.
                             </p>
                         </div>
                     </div>
@@ -162,30 +161,26 @@
                     <div class="pallete-caption">
                         <div class="pallete-font">
                             <h3>Шрифт</h3>
-                            <p>Gotham Pro</p>
+                            <p>Helvetica, Helvetica Neue</p>
                         </div>
                         <div class="pallete-color">
                             <h3>Цвет</h3>
                             <div class="color-types">
                                 <div class="color-typesCard wow fadeInLeft" data-wow-duration="1s">
                                     <span></span>
-                                    <p>#0175C2</p>
+                                    <p>#000000</p>
                                 </div>
                                 <div class="color-typesCard wow fadeInLeft" data-wow-duration="2s">
                                     <span class="cardCol2"></span>
-                                    <p>#4AB0E1</p>
+                                    <p>#FEFEFE</p>
                                 </div>
                                 <div class="color-typesCard wow fadeInLeft" data-wow-duration="3s">
                                     <span class="cardCol3"></span>
-                                    <p>#DAF1FF</p>
+                                    <p>#D31920</p>
                                 </div>
                                 <div class="color-typesCard wow fadeInLeft" data-wow-duration="4s">
                                     <span class="cardCol4"></span>
-                                    <p>#A3A3A1</p>
-                                </div>
-                                <div class="color-typesCard wow fadeInLeft" data-wow-duration="5s">
-                                    <span class="cardCol5"></span>
-                                    <p>#F3F5F4</p>
+                                    <p>#F6F6F6</p>
                                 </div>
                             </div>
                         </div>
@@ -232,7 +227,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-12 technology-img">
-                        <img src="images/unipro/unipro-mac.png" alt="unipro-mac">
+                        <img src="images/liom/liom-mac.png" alt="liom-mac">
                     </div>
                 </div>
             </div>
@@ -243,20 +238,19 @@
                     <div class="pages-title">
                         <h2>Разработанные страницы</h2>
                     </div>
-                    <div class="pages-pR1">
-                        <img src="images/unipro/unipro-laptop.png" class="wow fadeIn" data-wow-duration="2s" alt="laptop">
-                        <a href="images/unipro/unipro-program.png" data-lightbox="roadtrip"> <img src="images/unipro/unipro-program.png"
-                                class="wow fadeIn" data-wow-duration="2s" alt="program">
-                        </a>
-                    </div>
-                    <div class="pages-pR2">
-                        <a href="images/unipro/unipro-partners.png" data-lightbox="roadtrip"><img src="images/unipro/unipro-partners.png"
-                                class="wow fadeIn" data-wow-duration="2s" alt="partners"></a>
-                        <a href="images/uniprounipro-help.png" data-lightbox="roadtrip"><img src="images/unipro/unipro-help.png"
-                                class="wow fadeIn" data-wow-duration="2s" alt="help">
-                        </a>
-                        <a href="images/unipro/unipro-about.png" data-lightbox="roadtrip"><img src="images/unipro/unipro-about.png"
-                                class="wow fadeIn" data-wow-duration="2s" alt="about"></a>
+                    <div class="pages-pR1 row">
+                        <div class="col-lg-6">
+                            <a href="images/liom/liom-laptop.png" data-lightbox="roadtrip"><img src="images/liom/liom-laptop.png"
+                                    alt="laptop"></a>
+                            <a href="images/liom/liom-pages2.png" data-lightbox="roadtrip"><img src="images/liom/liom-pages2.png"
+                                    alt="pages2"></a>
+                            <a href="images/liom/liom-pages3.png" data-lightbox="roadtrip"><img src="images/liom/liom-pages3.png"
+                                    alt="pages3"></a>
+                        </div>
+                        <div class="col-lg-6">
+                            <a href="images/liom/liom-pages1.png" data-lightbox="roadtrip"><img src="images/liom/liom-pages1.png"
+                                    alt="pages1"></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -275,13 +269,13 @@
                 </div>
             </div>
             <div class="adaptive-imgContainer wow fadeIn" data-wow-duration="2s">
-                <img src="images/unipro/unipro-adaptiveLeft.png" alt="adLeft" class="adImg-Left">
-                <img src="images/unipro/unipro-adaptiveT.png" alt="adMain" class="adImg-Main">
-                <img src="images/unipro/unipro-adaptiveRight.png" alt="adRight" class="adImg-Right">
-                <img src="images/unipro/unipro-adaptiveB.png" alt="adB" class="adImg-Bottom">
+                <img src="images/liom/liom-adaptiveL.png" alt="adLeft" class="adImg-Left">
+                <img src="images/liom/liom-adaptiveM.png" alt="adMain" class="adImg-Main">
+                <img src="images/liom/liom-adaptiveR.png" alt="adRight" class="adImg-Right">
+                <img src="images/liom/liom-adaptiveB.png" alt="adB" class="adImg-Bottom">
             </div>
             <div class="adaptive-link">
-                <a href="https://unipro.ua/" target="_blank">unipro.ua</a>
+                <a href="https://www.liom.com.ua/" target="_blank">liom.com.ua</a>
             </div>
         </section>
         <section class="contacts-section">
@@ -357,7 +351,7 @@
                 <h2>Следующий кейс</h2>
                 <div class="footer-info">
                     <a href="#" class="footer-infoImg">
-                        <img src="images/common/axisoft.svg" alt="axoft">
+                        <img src="images/liom/liom-footerLogo.svg" alt="footerLogo">
                     </a>
                     <p>корпоративный сайт</p>
                 </div>
@@ -368,13 +362,11 @@
         </div>
     </footer>
     <!-- JS Scripts -->
-    <!-- <script src="scripts/libraries.min.js"></script> -->
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="libraries/wow/wow.min.js"></script>
-    <!-- <script src="scripts/script.js"></script> -->
-    <script>
-        new WOW().init();
-    </script>
+    <!-- <script src="js/parallax-mouse.min.js"></script> -->
+    <!-- <script src="js/lightbox.min.js"></script> -->
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
