--- a/#src/html/unipro.html
+++ b/#src/html/unipro.html
@@ -23,7 +23,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.0/animate.min.css" />
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 </head>
@@ -371,7 +371,7 @@
     <!-- <script src="scripts/libraries.min.js"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="libraries/wow/wow.min.js"></script>
-    <!-- <script src="scripts/script.js"></script> -->
+    <script src="scripts/script.js"></script>
     <script>
         new WOW().init();
     </script>
