Fixed Doosan Page v.1.4.1

--- a/#src/html/unipro.html
+++ b/#src/html/unipro.html
@@ -15,7 +15,7 @@
     <link rel="apple-touch-icon" href="images/favicons/favicon.png">
     <meta name="msapplication-TileImage" content="images/favicons/favicon.png">
     <!-- Lightbox -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" integrity="sha512-ZKX+BvQihRJPA8CROKBhDNvoc2aDMOdAlcm7TUQY+35XYtrd3yh95QOOhsPDQY9QnKE0Wqag9y38OIgEvb88cA==" crossorigin="anonymous" />
+<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" integrity="sha512-ZKX+BvQihRJPA8CROKBhDNvoc2aDMOdAlcm7TUQY+35XYtrd3yh95QOOhsPDQY9QnKE0Wqag9y38OIgEvb88cA==" crossorigin="anonymous" />-->
     <!-- Fonts -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Animate CSS -->
@@ -26,7 +26,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
-<body>
+<body class="bl-scroll">
 <header class="header-section">
     <div class="container">
         <div class="header-body">
@@ -170,7 +170,7 @@
             <div class="pallete-bg"></div>
             <div class="pallete-body">
                 <h2 class="pallete-title">
-                    Цветовая палитра и типографика
+                    Цветовая палитра <br> и типографика
                 </h2>
                 <div class="pallete-caption">
                     <div class="pallete-font">
@@ -260,17 +260,17 @@
                 </div>
                 <div class="pages-pR1">
                     <img src="images/unipro/unipro-laptop.png" class="wow fadeIn" data-wow-duration="2s" alt="laptop">
-                    <a href="images/unipro/unipro-program.png" data-lightbox="roadtrip">
+                    <a href="" data-lightbox="roadtrip">
                         <img src="images/unipro/unipro-program.png" class="wow fadeIn" data-wow-duration="2s" alt="program">
                     </a>
                 </div>
-                <div class="pages-pR2">
-                    <a href="images/unipro/unipro-partners.png" data-lightbox="roadtrip">
+                <div class="pages-pR2 row">
+                    <a href="" data-lightbox="roadtrip">
                         <img src="images/unipro/unipro-partners.png" class="wow fadeIn" data-wow-duration="2s" alt="partners"></a>
-                    <a href="images/unipro/unipro-help.png" data-lightbox="roadtrip">
+                    <a href="" data-lightbox="roadtrip">
                         <img src="images/unipro/unipro-help.png" class="wow fadeIn" data-wow-duration="2s" alt="help">
                     </a>
-                    <a href="images/unipro/unipro-about.png" data-lightbox="roadtrip">
+                    <a href="" data-lightbox="roadtrip">
                         <img src="images/unipro/unipro-about.png" class="wow fadeIn" data-wow-duration="2s" alt="about"></a>
                 </div>
             </div>
@@ -385,7 +385,7 @@
 </footer>
 <script src="libraries/libraries.min.js"></script>
 <script src="libraries/wow/wow.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js" integrity="sha512-k2GFCTbp9rQU412BStrcD/rlwv1PYec9SNrkbQlo6RZCf75l6KcC3UwDY8H5n5hl4v77IDtIPwOk9Dqjs/mMBQ==" crossorigin="anonymous"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js" integrity="sha512-k2GFCTbp9rQU412BStrcD/rlwv1PYec9SNrkbQlo6RZCf75l6KcC3UwDY8H5n5hl4v77IDtIPwOk9Dqjs/mMBQ==" crossorigin="anonymous"></script>-->
 <script src="scripts/script.js"></script>
 <script>
     new WOW().init();
